# diffeo

./: .gitignore  CMakeLists.txt  package.xml  setup.py
src/diffeo/parameters/: diffeoPars.xml
src/diffeo/python/: README.txt  current  diffeoPy.cpp  diffeoPy.pyx  forceFieldGenerator.py  forceFieldGenerator_2D.py  trajGenerator.py
src/diffeo/temp/input/: thisScaling  thisTarget  thisTime
src/diffeo/temp/result/: sourceTime  sourceTransform
src/diffeo/temp/result/thisTarget/diffeo/: centers.txt  coefs.txt  divisionCoefs.txt  targets.txt
src/diffeo/temp/result/thisTarget/diffeo/details/: cSpaceVel.txt  linGainRot.txt  offset.txt  scaling.txt
